# cpp-path-tracer

./: CMakeLists.txt  vcpkg-configuration.json
src/: main.cpp
src/shader/: shader.frag
